<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/liniar_layout_id"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@android:color/holo_orange_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">
            <TextView
                android:id="@+id/title"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/topoItem"
                android:hint="@string/hint_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"/>
            <EditText
                android:id="@+id/quantityItem"
                android:inputType="number"
                android:hint="@string/hint_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topoItem"/>
            <EditText
                android:id="@+id/colorItem"
                android:hint="@string/hint_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantityItem"/>
            <EditText
                android:id="@+id/sizeItem"
                android:hint="@string/hint_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_below="@+id/colorItem"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="200dp"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:background="@android:color/holo_blue_bright"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/save_button"
                android:layout_below="@+id/sizeItem"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>