<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:padding="3dp"
                android:layout_width="wrap_content"
                android:layout_marginTop="1dp"
                android:textSize="18sp"
                android:layout_height="wrap_content">
            </TextView>

            <Button
                android:id="@+id/conf_no_button"
                android:layout_width="wrap_content"
                android:text="@string/no_text"
                android:background="@color/colorAccent"
                android:textColor="@android:color/holo_green_dark"
                android:layout_marginTop="70dp"
                android:layout_height="wrap_content">
            </Button>

            <Button
                android:layout_alignParentEnd="true"
                android:id="@+id/conf_yes_button"
                android:layout_width="wrap_content"
                android:text="@string/yes_text"
                android:background="@color/colorAccent"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginTop="70dp"
                android:layout_height="wrap_content">
            </Button>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>